# PyOpenGL

./: .gitignore  chunkmanager.py  config.py  cube.py  goals.md  hud.py  input.py  main.py  math_utils.py  mesh_factory.py  obj_loader.py  outline_fragment_shader.ipynb  player.py  pyproject.toml  requirements.txt  terrain_generation.ipynb  terraingenerator.py  test.py  utils.py
models/: __init__.py  chunk.py  chunk_border.py  cube.py  cube_2.py  plane.py  sphere.py  voxel.py
shaders/: fragment.txt  rotating_colorwheel.txt  vertex.txt
shaders/chunkborders/: vertex.txt
shaders/fragment/: orbital.txt
shaders/geometry/: wireframe.txt
shaders/hud/: fragment.frag  vertex.vert
shaders/orbital/: fragment.txt  vertex.txt
shaders/voxel/: fragment.txt  geometry.txt  vertex.txt
shaders/wireframe/: vertex.txt
shaders/wireframe_voxel/: fragment.txt  vertex.txt
